# Medical-Signs-Complaints-Prompt

./: !Folder_Tree.bat  !GITHUB.CMD  !Github_push.py  !PUSH.CMD  !restartVE.bat  !restart_scc.cmd  .env.example  Folder_Tree.py  LICENSE  README.md  Readme3_25-26.md  TEST_WRITE_CMD.txt  _patch_home.py  db.sqlite3  db.sqlite3.pre_recovery.bak  db.sqlite3.pre_reset_20260321.bak  main.py  manage.py  pyproject.toml  recover_django.cmd  requirements.txt  requirementsFT.txt  setuo_scc_aoo,bat  structure.txt  verify_home.txt
!My_Help_Packges/: !00!START_SCC.cmd  !01restart_sccOLD.cmd  !FolderTreeClassic.bat  !Folder_Tree.bat  !MAIN_PLAN_Prompt.md  !black_ruff.cmd  !sync_black_ruff_env.bat  !verify_scc.cmd
FolderTrees/: clean_structure.txt  structure.txt
FolderTrees/!FolderTreeClassic/: tree_level_2.txt  tree_level_3.txt  tree_level_4.txt  tree_level_5.txt
Folder_Trees/: clean_structure.txt  structure.txt
accounts/: middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/management/commands/: cleanup_guests.py
accounts/migrations/: 0001_initial.py  0002_alter_familyuser_options_familyuser_country_and_more.py
complaints/: ai_summary.py  models.py  serializers.py  views.py
complaints/migrations/: 0001_initial.py
docs/: security.md
media/www_links/: www.links.md
scc/: DISCLAIMER FOR MEDICAL APP.md  LICENSE  MYSCC26.code-workspace  asgi.py  settings.py  urls.py  wsgi.py
templates/: 403_csrf.html  500.html  base.html
templates/account/: email_confirm.html  info_PM.txt  password_set.html
templates/accounts/: about.html  home.html
(+4 files in other folders)
